--- a/app/globals.css
+++ b/app/globals.css
@@ -64,8 +64,21 @@ body {
   font-family: 'Poppins', sans-serif !important;
   font-weight: medium !important;
 }
-
-
+.heading-lg {
+  @apply text-3xl md:text-4xl font-bold text-gray-700 mb-4;
+}
+.description {
+  @apply text-lg text-gray-600 ;
+}
+.description-1 {
+  @apply text-base text-gray-600 ;
+}
+.title-text {
+  @apply text-2xl md:text-xl font-semibold text-gray-600  leading-tight ;
+}
+.title-heading {
+  @apply text-2xl md:text-2xl font-semibold text-gray-700  leading-tight ;
+}
   .bg-banner {
     background-image: url('/bannner.jpg');
     /* Place inside public/ folder */
