--- a/app/globals.css
+++ b/app/globals.css
@@ -95,7 +95,22 @@ body {
 .description {
   @apply text-[17px] text-[#241d1f];
 }
+.font_4{
+  font-size: 24px;
+  font-weight: 400;
 
+  margin-top: 10px;
+  
+  color: #241d1f;
+  font-family: 'Poppins', sans-serif !important;
+}
+.font_8{
+  font-size: 16px;
+  font-weight: 500;
+  margin-bottom: 5px;  
+  color: #241d1f;
+  font-family: 'Poppins', sans-serif !important;
+}
 .description-white {
   @apply text-[17px] text-white;
 }
